<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Uploader</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_logon">Logon</string>
    <string name="exampleURL">http://example.com</string>
    <string name="username">Username</string>
    <string name="logon">Logon</string>
    <string name="menu_logon">Logon</string>
    <string name="keystoreLabel">Keystore File and Passphrase</string>
    <string name="usernameLabel">Username</string>
    <string name="passphraseLabel">Passphrase</string>
    <string name="empty"></string>
    <string name="keystore">Keystore</string>
    <string name="title_activity_file_description">File Description</string>
    <string name="lblFilename">File Name:</string>
    <string name="lblFilesize">File Size:</string>
    <string name="lblMD5">MD5 Hash</string>
    <string name="btnDownload">Download</string>
    <string name="menu_upload">Upload File</string>
    <string name="lblPath">Full Path:</string>
    <string name="title_activity_upload_dialog">Upload File</string>
    <string name="btnDelete">Delete</string>
    <string name="menu_refresh">Refresh</string>
    <string name="btnMerge">Merge</string>
    <string name="btnClean">Clean</string>
    <string name="lblBase64">Base64:</string>
    <string name="btnDecode">Decode</string>
    <string name="btnEncode">Encode</string>

</resources>
